# open-env-hack-2026

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  improvement_prd for 2026  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_smoke.py
openenv_smart_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  environment.py
server/static/: index.html
