[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-smart-factory"
version = "1.0.0"
description = "HuggingFace Spaces deployment for Meta OpenEnv Hackathon 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "pydantic",
    "numpy",
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.3",
    "huggingface-hub>=1.9.0",
]

[tool.uv]
managed = true
[project.scripts]
server = "server.app:main"
