[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-factory-env"
version = "0.1.0"
description = "Meta OpenEnv Hackathon Submission"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart"
]

# ADD THIS SECTION EXACTLY LIKE THIS
[project.scripts]
server = "server.app:main"